# CCTV

./: LICENSE  README.md
laptop/: .gitignore  Dockerfile  docker-compose.laptop.yml  manage.py  pyproject.toml  requirements.txt  sync.conf.example
laptop/sync/: agent.py
rpi/: .dockerignore  .gitignore  Dockerfile  cctv.conf.example  docker-compose.rpi.yml  manage.py  pyproject.toml  requirements.txt
rpi/recorder/: motion.py  recorder.py
rpi/shared/: config.py  db.py  frame_buffer.py  paths.py  runtime_flags.py  state.py
rpi/storage/: manager.py
rpi/web/: app.py  auth.py
rpi/web/routers/: __init__.py  api.py  auth.py  footage.py  live.py  status.py
rpi/web/routes/: api.py  footage.py  live.py
rpi/web/services/: footage_service.py  motion_service.py  segment_service.py
rpi/web/templates/: base.html  footage.html  live.html  login.html  status.html
